# py-bitable

./: .copilot-commit-message-instructions.md  .gitattributes  .gitignore  README.md  pyproject.toml  pytest.ini
docs/: ARCHITECTURE.md  QUICKSTART.md
playground/: example_usage.py
src/awesome_project/: __init__.py
src/py_bitable/: __init__.py  bitable.py  client.py  field_enums.py  field_models.py  http_client.py  models.py
tests/: __init__.py  integration_test.py  test_bitable.py  test_models.py
