[project]
name = "py-bitable"
version = "0.1.0"
description = "Python library for uploading attachments and creating records in Feishu Bitable"
readme = "README.md"
authors = [{ name = "HernandoR", email = "lzhen.dev@outlook.com" }]
requires-python = ">=3.10"
dependencies = [
    "rootutils>=1.0.7",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "typing-extensions>=4.0.0",
    "baseopensdk @ https://lf3-static.bytednsdoc.com/obj/eden-cn/lmeh7phbozvhoz/base-open-sdk/baseopensdk-0.0.13-py3-none-any.whl",
    "loguru>=0.7.3",
    "ratelimit>=2.2.1",
]

[project.scripts]
py-bitable = "py_bitable:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pytest>=8.0.0", "pytest-cov>=4.0.0", "ruff>=0.1.0"]


[[tool.uv.index]]
url = "https://mirrors.cernet.edu.cn/pypi/web/simple"
default = true

[tool.hatch.metadata]
allow-direct-references = true
